refined some blocks

--- a/notebooks/07_report.ipynb
+++ b/notebooks/07_report.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 1,
    "id": "0815ad64-f59a-4d0c-931c-066a8ffbbf67",
    "metadata": {},
    "outputs": [],
@@ -11,13 +11,13 @@
     "# - wählt automatisch den neuesten passenden *_lstm Run (Lookback/H/eps)\n",
     "# - liest evaluation.json (+ optional cost_sensitivity.csv von Block 6)\n",
     "# - fasst Metriken & Backtests zusammen\n",
-    "# - schreibt: report_block7.md, report_block7.json, kpis_block7.csv\n",
-    "# -----------------------------------------------------------------------------"
+    "# - schreibt: REPORT_block7.md, REPORT_block7_kpis.json, kpis_block7.csv (optional)\n",
+    "# ------------------------------------------------------------------------------"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 2,
    "id": "db17a3bd-70e4-4b31-967b-b18ec77373a0",
    "metadata": {},
    "outputs": [],
@@ -25,12 +25,13 @@
     "import os, json, yaml, re\n",
     "from pathlib import Path\n",
     "from datetime import datetime\n",
+    "import numpy as np\n",
     "import pandas as pd"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 3,
    "id": "aabe6ed9-b8f0-4843-9051-3352546c50c2",
    "metadata": {},
    "outputs": [],
@@ -46,10 +47,6 @@
     "                    eps_mode: str = None,\n",
     "                    epsilon: float = None,\n",
     "                    strict: bool = False) -> Path | None:\n",
-    "    \"\"\"\n",
-    "    Suche in results_dir nach *_lstm Runs. Wenn lookback/horizon/eps angegeben sind,\n",
-    "    versuche passende Runs zu priorisieren. Fallback: neuester Run per mtime.\n",
-    "    \"\"\"\n",
     "    runs = sorted(results_dir.glob(\"*_lstm\"), key=lambda p: p.stat().st_mtime, reverse=True)\n",
     "    if not runs:\n",
     "        return None\n",
@@ -60,7 +57,6 @@
     "        except Exception:\n",
     "            return False\n",
     "        ok_lb = (lookback is None) or (int(cfg.get(\"lookback\", -1)) == lookback)\n",
-    "        # H/EPS auch über train_csv-Namen tolerieren\n",
     "        tc = str(cfg.get(\"train_csv\", \"\"))\n",
     "        mH = re.search(r\"_cls_h(\\d+)_\", tc)\n",
     "        mE = re.search(r\"_(abs|rel)([\\dp]+)\\.csv$\", tc)\n",
@@ -76,13 +72,13 @@
     "\n",
     "    matches_list = [r for r in runs if matches(r)]\n",
     "    if matches_list:\n",
-    "        return matches_list[0]  # neuester passender\n",
-    "    return None if strict else runs[0]  # neuester überhaupt"
+    "        return matches_list[0]\n",
+    "    return None if strict else runs[0]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 4,
    "id": "2829a180-c092-4e26-9e97-b2be4b71c411",
    "metadata": {},
    "outputs": [],
@@ -96,7 +92,7 @@
     "LOOKBACK    = int(C[\"lookback\"])\n",
     "FEATURESET  = C.get(\"featureset\", \"v2\")\n",
     "\n",
-    "# Label primär aus YAML lesen (Block 2 ist Quelle der Wahrheit)\n",
+    "# Label primär aus YAML lesen (Block 2 schreibt das hinein)\n",
     "HORIZON = MODE = EPS = None\n",
     "yml = ROOT / f\"data/features_{FEATURESET}.yml\"\n",
     "if yml.exists():\n",
@@ -104,13 +100,12 @@
     "    lab = meta.get(\"label\", {})\n",
     "    HORIZON = int(lab.get(\"horizon\", 0)) or None\n",
     "    MODE    = str(lab.get(\"mode\", \"\")) or None\n",
-    "    EPS     = float(lab.get(\"epsilon\", 0.0)) or None\n",
-    "# Fallback (falls YAML fehlt): später über evaluation.json des Runs"
+    "    EPS     = float(lab.get(\"epsilon\", 0.0)) or None"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 5,
    "id": "b898427f-16bc-44dd-ba5e-5f2abd283aea",
    "metadata": {},
    "outputs": [
@@ -118,15 +113,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "RUN_DIR -> C:\\Users\\jacin\\finance-lstm\\results\\2025-10-19_16-48-09_lstm\n"
+      "RUN_DIR -> C:\\Users\\jacin\\finance-lstm\\results\\2025-10-22_12-14-18_lstm\n"
      ]
     }
    ],
    "source": [
     "# ---------- RUN_DIR ermitteln ----------\n",
-    "# 1) manueller Override via Umgebungsvariable (z.B. in Notebook-Zelle: os.environ[\"RUN_DIR\"]=\".../results/..._lstm\")\n",
     "run_override = os.getenv(\"RUN_DIR\", \"\").strip() or None\n",
-    "\n",
     "if run_override:\n",
     "    RUN_DIR = Path(run_override).resolve()\n",
     "else:\n",
@@ -140,7 +133,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 6,
    "id": "23f9e4fd-dafa-468d-8049-f2437e2e2cb7",
    "metadata": {},
    "outputs": [],
@@ -163,35 +156,121 @@
     "if MODE is None:\n",
     "    MODE = (ev.get(\"label_resolved_from\") or {}).get(\"mode\") or cfg.get(\"epsilon_mode\")\n",
     "if EPS is None:\n",
-    "    EPS = float((ev.get(\"label_resolved_from\") or {}).get(\"epsilon\") or cfg.get(\"epsilon\"))\n",
-    "\n",
-    "# Kosten-Sensitivität (optional aus Block 6)\n",
+    "    EPS = float((ev.get(\"label_resolved_from\") or {}).get(\"epsilon\") or cfg.get(\"epsilon\"))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "0407107f-a03e-4891-856e-c16726338a5a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# ---------- Kosten-Sensitivität laden ----------\n",
     "sens_path = RUN_DIR / \"cost_sensitivity.csv\"\n",
     "sens_df = pd.read_csv(sens_path) if sens_path.exists() else None\n",
     "\n",
-    "# Haupt-Kostenannahme (für Report)\n",
-    "MAIN_RT = 15.0      # Roundtrip in bps\n",
-    "MAIN_SLIP_PER_LEG = 2.0  # nur Annotation für Plot/Legende\n",
+    "MAIN_RT = 15.0\n",
+    "MAIN_SLIP_PER_LEG = 2.0\n",
     "\n",
     "cost_pick = {}\n",
     "if sens_df is not None and len(sens_df):\n",
-    "    df_t = sens_df[sens_df[\"model\"].str.contains(\"Entry@t\")].copy()\n",
-    "    if df_t.empty:  # Fallback: irgendein Modell\n",
-    "        df_t = sens_df.copy()\n",
-    "    df_t[\"rt_diff\"] = (df_t[\"roundtrip_bps\"] - MAIN_RT).abs()\n",
-    "    row = df_t.sort_values([\"rt_diff\", \"roundtrip_bps\"]).iloc[0].to_dict()\n",
+    "    # CHANGE (Pflicht): KPI nur aus Entry@t+1 wählen\n",
+    "    df_t1_exact = sens_df[sens_df[\"model\"] == \"Entry@t+1\"]                          # exakter Name\n",
+    "    df_t1_prefix = sens_df[sens_df[\"model\"].astype(str).str.startswith(\"Entry@t+1\")]# fallback (z.B. \"Entry@t+1 (No-Overlap)\")\n",
+    "    df_t1 = df_t1_exact if len(df_t1_exact) else df_t1_prefix\n",
+    "\n",
+    "    if not len(df_t1):\n",
+    "        # äußerster Fallback: gesamte Sensitivität verwenden (sollte nicht nötig sein)\n",
+    "        df_t1 = sens_df.copy()\n",
+    "\n",
+    "    df_t1[\"rt_diff\"] = (df_t1[\"roundtrip_bps\"] - MAIN_RT).abs()\n",
+    "    row = df_t1.sort_values([\"rt_diff\", \"roundtrip_bps\"]).iloc[0].to_dict()\n",
     "    cost_pick = dict(\n",
     "        model=row[\"model\"], roundtrip_bps=float(row[\"roundtrip_bps\"]),\n",
-    "        trades=int(row[\"trades\"]), CAGR=float(row[\"CAGR\"]),\n",
-    "        Sharpe=float(row[\"Sharpe\"]), MaxDD=float(row[\"MaxDD\"]),\n",
+    "        trades=int(row.get(\"trades\", 0)), exposure=float(row.get(\"exposure\", np.nan)),\n",
+    "        turnover=float(row.get(\"turnover\", np.nan)),\n",
+    "        CAGR=float(row[\"CAGR\"]), Sharpe=float(row[\"Sharpe\"]), MaxDD=float(row[\"MaxDD\"]),\n",
     "        final_equity=float(row[\"final_equity\"]),\n",
     "    )"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
-   "id": "0407107f-a03e-4891-856e-c16726338a5a",
+   "execution_count": 8,
+   "id": "69024c17-9f6c-4017-97de-5b7c461aff18",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# ---------- Baselines (Empfehlung): Always-Up, LogReg, MACD -------------------\n",
+    "# Wir rekonstruieren die Splits, damit LogReg & MACD gegen denselben Test laufen\n",
+    "TRAIN_CSV = Path(cfg.get(\"train_csv\", \"\"))\n",
+    "features_list = cfg.get(\"features\", None)\n",
+    "if not features_list:\n",
+    "    # Fallback: YAML\n",
+    "    yml = ROOT / f\"data/features_{FEATURESET}.yml\"\n",
+    "    if yml.exists():\n",
+    "        meta = yaml.safe_load(open(yml, \"r\")) or {}\n",
+    "        features_list = meta.get(\"features\", [])\n",
+    "df_all = pd.read_csv(TRAIN_CSV, index_col=0, parse_dates=True).sort_index()\n",
+    "X_all = df_all[features_list].copy()\n",
+    "y_all = df_all[\"target\"].astype(int).copy()\n",
+    "\n",
+    "n = len(df_all)\n",
+    "n_train = int(n * 0.70)\n",
+    "n_val   = int(n * 0.15)\n",
+    "n_test  = n - n_train - n_val\n",
+    "\n",
+    "X_train, y_train = X_all.iloc[:n_train],              y_all.iloc[:n_train]\n",
+    "X_val,   y_val   = X_all.iloc[n_train:n_train+n_val], y_all.iloc[n_train:n_train+n_val]\n",
+    "X_test,  y_test  = X_all.iloc[n_train+n_val:],        y_all.iloc[n_train+n_val:]\n",
+    "\n",
+    "# Window-Ende-Ausrichtung (wie im Netz)\n",
+    "LB = int(cfg.get(\"lookback\", LOOKBACK))\n",
+    "from sklearn.preprocessing import StandardScaler\n",
+    "from sklearn.linear_model import LogisticRegression\n",
+    "from sklearn.metrics import average_precision_score\n",
+    "\n",
+    "scaler = StandardScaler().fit(X_train)\n",
+    "Xtr_s = pd.DataFrame(scaler.transform(X_train), index=X_train.index, columns=X_train.columns)\n",
+    "Xva_s = pd.DataFrame(scaler.transform(X_val),   index=X_val.index,   columns=X_val.columns)\n",
+    "Xte_s = pd.DataFrame(scaler.transform(X_test),  index=X_test.index,  columns=X_test.columns)\n",
+    "\n",
+    "tail = slice(LB-1, None)\n",
+    "ytr_tail, yva_tail, yte_tail = y_train.iloc[tail], y_val.iloc[tail], y_test.iloc[tail]\n",
+    "Xtr_tail, Xva_tail, Xte_tail = Xtr_s.iloc[tail],   Xva_s.iloc[tail],   Xte_s.iloc[tail]\n",
+    "\n",
+    "# Always-Up baseline\n",
+    "pos_rate_test = float(yte_tail.mean())\n",
+    "auprc_always_up = pos_rate_test   # PR-AUC der trivialen Positiv-Baseline\n",
+    "\n",
+    "# LogReg baseline neu fitten (wie in Block 3, nur für den Report)\n",
+    "logit = LogisticRegression(max_iter=200)\n",
+    "logit.fit(Xtr_tail, ytr_tail)\n",
+    "proba_lr = logit.predict_proba(Xte_tail)[:,1]\n",
+    "auprc_lr = float(average_precision_score(yte_tail, proba_lr))\n",
+    "\n",
+    "# Simple MACD-Regel als Score (roh: macd_diff auf Test-Tail)\n",
+    "macd_diff = df_all.loc[Xte_tail.index, \"macd_diff\"].astype(float)\n",
+    "# falls fehlend, setze Null\n",
+    "if macd_diff.isna().any():\n",
+    "    macd_diff = macd_diff.fillna(0.0)\n",
+    "auprc_macd = float(average_precision_score(yte_tail, macd_diff.values))\n",
+    "\n",
+    "baselines_tbl = pd.DataFrame([\n",
+    "    {\"baseline\": \"Always-Up\", \"auprc\": auprc_always_up, \"pos_rate\": pos_rate_test,\n",
+    "     \"auprc_over_posrate\": (auprc_always_up / max(pos_rate_test, 1e-12))},\n",
+    "    {\"baseline\": \"Logistic Regression\", \"auprc\": auprc_lr, \"pos_rate\": pos_rate_test,\n",
+    "     \"auprc_over_posrate\": (auprc_lr / max(pos_rate_test, 1e-12))},\n",
+    "    {\"baseline\": \"Simple MACD (macd_diff score)\", \"auprc\": auprc_macd, \"pos_rate\": pos_rate_test,\n",
+    "     \"auprc_over_posrate\": (auprc_macd / max(pos_rate_test, 1e-12))}\n",
+    "])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "57a3d6ad-a1c5-4a7e-83d1-bf5de33dc062",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -213,6 +292,8 @@
     "        \"chosen\": calib.get(\"chosen\"),\n",
     "        \"val_brier\": calib.get(\"val_brier\"),\n",
     "        \"test_brier\": calib.get(\"test_brier\"),\n",
+    "        # CHANGE: explizite Textnotiz zur Kalibrierungsentscheidung\n",
+    "        \"note\": \"Kalibrationsentscheidung ausschließlich auf Validation; Test nur zur Berichterstattung.\"\n",
     "    },\n",
     "    \"threshold\": {\n",
     "        \"strategy\": thr_sel.get(\"strategy\"),\n",
@@ -228,14 +309,15 @@
     "        \"mcc\": metrics.get(\"mcc\"),\n",
     "        \"confusion_matrix\": metrics.get(\"confusion_matrix\"),\n",
     "    },\n",
-    "    \"backtest_gross\": backtest_gross,   # ohne Kosten (Block 4)\n",
-    "    \"backtest_cost_pick\": cost_pick,    # netto Auswahl aus Block 6\n",
+    "    \"backtest_gross\": backtest_gross,     # ohne Kosten (Block 4)\n",
+    "    \"backtest_cost_pick\": cost_pick,      # netto Auswahl aus Block 6 (T+1-only)\n",
+    "    \"baselines\": baselines_tbl.to_dict(orient=\"records\")\n",
     "}"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 10,
    "id": "40e11499-04f4-45e6-9659-437cd867ed45",
    "metadata": {},
    "outputs": [
@@ -243,8 +325,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "✓ REPORT geschrieben → C:\\Users\\jacin\\finance-lstm\\results\\2025-10-19_16-48-09_lstm\\REPORT_block7.md\n",
-      "✓ KPIs JSON → C:\\Users\\jacin\\finance-lstm\\results\\2025-10-19_16-48-09_lstm\\REPORT_block7_kpis.json\n"
+      "✓ REPORT geschrieben → C:\\Users\\jacin\\finance-lstm\\results\\2025-10-22_12-14-18_lstm\\REPORT_block7.md\n",
+      "✓ KPIs JSON → C:\\Users\\jacin\\finance-lstm\\results\\2025-10-22_12-14-18_lstm\\REPORT_block7_kpis.json\n",
+      "✓ KPIs CSV → C:\\Users\\jacin\\finance-lstm\\results\\2025-10-22_12-14-18_lstm\\kpis_block7.csv\n"
      ]
     }
    ],
@@ -258,8 +341,9 @@
     "    \"cm\":   fig_dir / \"cm_test.png\",\n",
     "    \"proba\": fig_dir / \"proba_hist_raw_vs_used.png\",\n",
     "    \"equity_gross\": fig_dir / \"equity_curves_t_vs_t1.png\",\n",
-    "    \"equity_cost\":  fig_dir / \"equity_costed.png\",  # Block 6\n",
+    "    \"equity_cost\":  fig_dir / \"equity_costed.png\",\n",
     "}\n",
+    "\n",
     "def _rel(p: Path) -> str:\n",
     "    return str(p.relative_to(RUN_DIR)) if p.exists() else str(p)\n",
     "\n",
@@ -276,10 +360,13 @@
     "# Klassif.-Metriken\n",
     "m = kpis[\"classification_test\"]\n",
     "lines.append(\"## Test-Metriken\")\n",
-    "lines.append(f\"- AUROC: **{m['roc_auc']:.3f}**, AUPRC: **{m['auprc']:.3f}**, Brier: **{m['brier']:.3f}**\")\n",
+    "lines.append(f\"- AUROC: **{m['roc_auc']:.3f}**, AUPRC: **{m['auprc']:.3f}** (Random-Baseline = Positivrate), Brier: **{m['brier']:.3f}**\")\n",
     "lines.append(f\"- Balanced Acc: **{m['balanced_accuracy']:.3f}**, MCC: **{m['mcc']:.3f}**\\n\")\n",
     "lines.append(f\"![ROC]({_rel(figs['roc'])})  \\n![PR]({_rel(figs['pr'])})\\n\")\n",
     "lines.append(f\"![Calibration]({_rel(figs['calib'])})  \\n![Confusion]({_rel(figs['cm'])})  \\n![Probas]({_rel(figs['proba'])})\\n\")\n",
+    "\n",
+    "# Kalibration – klarer Satz (Pflicht)\n",
+    "lines.append(\"> **Kalibration:** Entscheidung ausschließlich auf der Validation; der Test-Split dient nur der Berichterstattung.\\n\")\n",
     "\n",
     "# Backtests\n",
     "lines.append(\"## Backtests\")\n",
@@ -289,28 +376,61 @@
     "    t1 = bg.get(\"strategy_t1\", {})\n",
     "    bh = bg.get(\"buy_hold\", {})\n",
     "    lines.append(f\"- **Ohne Kosten** – Entry@t: CAGR {t.get('CAGR'):.3f}, Sharpe {t.get('Sharpe'):.3f}, \"\n",
-    "                 f\"Equity {t.get('final_equity'):.3f};  Entry@t+1: CAGR {t1.get('CAGR'):.3f}, \"\n",
-    "                 f\"Sharpe {t1.get('Sharpe'):.3f}, Equity {t1.get('final_equity'):.3f};  \"\n",
+    "                 f\"Equity {t.get('final_equity'):.3f} *(Referenz/Upper bound, nicht handelbar)*;  \"\n",
+    "                 f\"Entry@t+1: CAGR {t1.get('CAGR'):.3f}, Sharpe {t1.get('Sharpe'):.3f}, Equity {t1.get('final_equity'):.3f};  \"\n",
     "                 f\"Buy&Hold: CAGR {bh.get('CAGR'):.3f}, Equity {bh.get('final_equity'):.3f}.\")\n",
     "    lines.append(f\"![Equity gross]({_rel(figs['equity_gross'])})\\n\")\n",
     "\n",
     "cp = kpis[\"backtest_cost_pick\"]\n",
+    "lines.append(\"## Kosten-KPI (realistisch, T+1)\")\n",
     "if cp:\n",
-    "    lines.append(\"## Kosten-Szenario (Netto)\")\n",
     "    lines.append(f\"- Gewählt: **{cp['model']}** bei **{cp['roundtrip_bps']:.1f} bps** (≈ Main {MAIN_RT:.0f} bps); \"\n",
-    "                 f\"Trades={cp['trades']}, CAGR={cp['CAGR']:.3f}, Sharpe={cp['Sharpe']:.3f}, \"\n",
-    "                 f\"MaxDD={cp['MaxDD']:.3f}, Equity={cp['final_equity']:.3f}.\")\n",
-    "    lines.append(f\"- Plot: Slippage-Annahme {MAIN_SLIP_PER_LEG:.1f} bps pro Leg (nur Annotation).\")\n",
+    "                 f\"Trades={cp.get('trades','?')}, Exposure={cp.get('exposure',float('nan')):.3f}, \"\n",
+    "                 f\"Turnover={cp.get('turnover',float('nan')):.1f}, CAGR={cp['CAGR']:.3f}, \"\n",
+    "                 f\"Sharpe={cp['Sharpe']:.3f}, MaxDD={cp['MaxDD']:.3f}, Equity={cp['final_equity']:.3f}.\")\n",
     "    lines.append(f\"![Equity net]({_rel(figs['equity_cost'])})\\n\")\n",
     "else:\n",
-    "    lines.append(\"**Hinweis:** Kein `cost_sensitivity.csv` gefunden – Block 6 noch nicht gelaufen.\\n\")\n",
+    "    lines.append(\"- **Hinweis:** Keine `cost_sensitivity.csv` gefunden – Block 6 (Kosten-Backtest) noch nicht gelaufen.\\n\")\n",
+    "\n",
+    "# Baselines-Tabelle (Empfehlung)\n",
+    "lines.append(\"## Baselines (PR-AUC relativ zur Positivrate)\")\n",
+    "lines.append(\"\")\n",
+    "lines.append(\"| Baseline | PR-AUC | Positivrate | PR-AUC / Positivrate |\")\n",
+    "lines.append(\"|---|---:|---:|---:|\")\n",
+    "for r in kpis[\"baselines\"]:\n",
+    "    lines.append(f\"| {r['baseline']} | {r['auprc']:.3f} | {r['pos_rate']:.3f} | {r['auprc_over_posrate']:.2f} |\")\n",
+    "lines.append(\"\")\n",
+    "\n",
+    "# Limitations & Negativresultate (Empfehlung)\n",
+    "lines.append(\"## Limitations & Negativresultate\")\n",
+    "lines.append(\"- **ε-Sensitivität:** Ergebnisse hängen vom Label-Threshold ε ab; Sweeps zeigen teils deutliche Variation.\")\n",
+    "lines.append(\"- **Schwacher MCC in WFCV:** Die walk-forward Cross-Validation ergab niedrige bis instabile MCC-Werte; Ranking-Fähigkeit ist begrenzt.\")\n",
+    "lines.append(\"- **Regimewechsel:** Einmodell-Training über lange Zeiträume ist anfällig für Regimewechsel (Volatilität, Makro, Marktstruktur).\")\n",
+    "lines.append(\"- **Single-Asset-Bias:** Ergebnisse basieren auf einem Asset/Ticker (AAPL); Generalisierbarkeit ist nicht gezeigt.\\n\")\n",
     "\n",
     "report_md.write_text(\"\\n\".join(lines), encoding=\"utf-8\")\n",
     "print(\"✓ REPORT geschrieben →\", report_md)\n",
     "\n",
     "# zusätzlich KPIs als JSON\n",
     "(RUN_DIR / \"REPORT_block7_kpis.json\").write_text(json.dumps(kpis, indent=2), encoding=\"utf-8\")\n",
-    "print(\"✓ KPIs JSON →\", RUN_DIR / \"REPORT_block7_kpis.json\")"
+    "print(\"✓ KPIs JSON →\", RUN_DIR / \"REPORT_block7_kpis.json\")\n",
+    "\n",
+    "# optional: CSV mit Kern-KPIs\n",
+    "try:\n",
+    "    kpi_rows = {\n",
+    "        \"roc_auc\": metrics.get(\"roc_auc\"), \"auprc\": metrics.get(\"auprc\"), \"brier\": metrics.get(\"brier\"),\n",
+    "        \"bal_acc\": metrics.get(\"balanced_accuracy\"), \"mcc\": metrics.get(\"mcc\"),\n",
+    "        \"cost_model\": cp.get(\"model\") if cp else None,\n",
+    "        \"cost_rt_bps\": cp.get(\"roundtrip_bps\") if cp else None,\n",
+    "        \"cost_CAGR\": cp.get(\"CAGR\") if cp else None,\n",
+    "        \"cost_Sharpe\": cp.get(\"Sharpe\") if cp else None,\n",
+    "        \"cost_MaxDD\": cp.get(\"MaxDD\") if cp else None,\n",
+    "        \"cost_Equity\": cp.get(\"final_equity\") if cp else None\n",
+    "    }\n",
+    "    pd.DataFrame([kpi_rows]).to_csv(RUN_DIR / \"kpis_block7.csv\", index=False)\n",
+    "    print(\"✓ KPIs CSV →\", RUN_DIR / \"kpis_block7.csv\")\n",
+    "except Exception as e:\n",
+    "    print(\"[WARN] KPIs CSV nicht geschrieben:\", e)"
    ]
   },
   {
